tests/pass/generic_basic.tk
shape Box<T> (
    val: T
)

fn main() -> i32 {
    auto b = Box<i32>(val=10)
    return 0
}
